# bitaxe-clocker

./: .clippy.toml  Cargo.toml  README.md  config.example.toml
src/: bitaxe.rs  common.rs  lib.rs  main  main.rs  price.rs
src/price_providers/: elpriset_just_nu.rs  factory.rs  mod.rs  price.rs
tests/: common.rs
tests/fixtures/: bitaxe_info.json  price.json
tests/unit/: bitaxe_tests.rs  mod.rs  price_tests.rs
tests/unit/price_providers/: mod.rs  price_tests.rs
