[package]
name = "bitaxe-clocker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
toml = { version = "0.8.19" }
