[package]
name = "bitaxe-clocker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39" }
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
toml = { version = "0.8.19" }

[dev-dependencies]
mockito = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
